--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,12 @@
             <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>mysql</artifactId>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
 
     <build>
